Fix spacing of host names

--- a/styles/components/Hero.module.scss
+++ b/styles/components/Hero.module.scss
@@ -33,25 +33,33 @@
   div {
     width: 50%;
     position: relative;
-    left: 8%;
+    left: 4%;
 
     img {
       width: 100%;
     }
 
     &:last-of-type {
-      left: -8%;
+      left: -4%;
       top: 3em;
+    }
+
+    h6 {
+      font-size: 1em;
     }
   }
 
   @media screen and (min-width: $screen-md) {
     div {
-      left: 6%;
+      left: 5%;
 
       &:last-of-type {
-        left: -6%;
-        top: 5em;
+        left: -5%;
+        top: 3em;
+      }
+
+      h6 {
+        font-size: 1.2em;
       }
     }
   }
